--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.datasource.password=user
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database=POSTGRESQL
 
-spring.jpa.hibernate.ddl_auto=update
+spring.jpa.hibernate.ddl_auto=create
 
 spring.main.allow-bean-definition-overriding=true
 
 #FLYWAY
-spring.flyway.locations=classpath:/db/migration
-spring.flyway.schemas=public
+# spring.flyway.locations=classpath:/db/migration
+# spring.flyway.schemas=public
