--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=user
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database=POSTGRESQL
 
-spring.jpa.hibernate.ddl_auto=create
+spring.jpa.hibernate.ddl_auto=create-drop
 
 spring.main.allow-bean-definition-overriding=true
 
