--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.jpa.hibernate.ddl_auto=create-drop
 
 spring.main.allow-bean-definition-overriding=true
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 #FLYWAY
 # spring.flyway.locations=classpath:/db/migration
 # spring.flyway.schemas=public
