--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,13 @@ spring.datasource.password=user
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database=POSTGRESQL
 
-spring.jpa.hibernate.ddl_auto=update
+spring.jpa.hibernate.ddl_auto=create-drop
 
 spring.main.allow-bean-definition-overriding=true
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 #FLYWAY
-spring.flyway.locations=classpath:/db/migration
-spring.flyway.schemas=public
+# spring.flyway.locations=classpath:/db/migration
+# spring.flyway.schemas=public
