--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database=POSTGRESQL
 
 spring.jpa.hibernate.ddl_auto=create-drop
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 spring.main.allow-bean-definition-overriding=true
 
