--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,19 @@
             <artifactId>jjwt-jackson</artifactId>
             <version>0.10.5</version>
             <scope>runtime</scope>
-        </dependency>             
+        </dependency>
+		
+		<dependency>
+			<groupId>com.intuit.karate</groupId>
+			<artifactId>karate-core</artifactId>
+			<version>1.2.0</version>
+		</dependency>		
+		<dependency>
+			<groupId>com.intuit.karate</groupId>
+			<artifactId>karate-junit5</artifactId>
+			<version>1.2.0</version>
+			<scope>test</scope>
+		</dependency>           
 	</dependencies>
 
 	<build>
