--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ mvnw.cmd
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+src/test/e2e/node_modules
 
 ### STS ###
 .apt_generated
